corrected z-index

--- a/styles/styles-about.css
+++ b/styles/styles-about.css
@@ -3,6 +3,8 @@
     background: radial-gradient(circle, #0f0c29, #24243e);
     backdrop-filter: blur(5px);
     overflow-x: hidden;
+    position: relative;
+    z-index: 1;
 }
 
 h2 {
