--- a/styles/styles-cover.css
+++ b/styles/styles-cover.css
@@ -12,6 +12,7 @@ body {
     width: 100%;
     padding: 15px 0;
     backdrop-filter: blur(10px);
+    z-index: 1000;
 }
 
 .navbar ul {
